--- a/read_and_map_viirs.ipynb
+++ b/read_and_map_viirs.ipynb
@@ -183,7 +183,7 @@
         "          if is_save == 'Y' or is_save == 'y':\n",
         "            #saves as a png if the user would like\n",
         "            pngfile = '{0}.png'.format(FILE_NAME[:-3])\n",
-        "            fig.savefig('/content/drive/My Drive/Colab Notebooks/VIIRS/' + pngfile, dpi = 300, bbox_inches='tight')\n",
+        "            fig.savefig('/content/drive/My Drive/Colab Notebooks/' + pngfile, dpi = 300, bbox_inches='tight')\n",
         "        #close the hdf5 file \n",
         "        file.close()"
       ],
